# Rust_Projects

note_api/: .env  .gitignore  Cargo.toml  get_notes.rs  notes.db  post_note.rs  update_note.rs
note_api/src/: main.rs
note_api/src/db/: mod.rs
note_api/src/handlers/: mod.rs
note_api/src/models/: mod.rs
note_api/src/routes/: mod.rs
todo_manager/: Cargo.toml  tasks.json
todo_manager/src/: main.rs
